--- a/.github/workflows/checks.yaml
+++ b/.github/workflows/checks.yaml
@@ -15,7 +15,7 @@ jobs:
           password: ${{ secrets.DOCKERHUB_TOKEN }}
       - name: Checkout
         uses: action/checkout@v2
-        with: ${{ secrets.GITHUB_TOKEN}}
+        with: ${{ secrets.WORKFLOW_ACCESS_TOKEN}}
       - name: Test
         run: docker-compose run --rm app sh -c "python manage.py test"
       - name: Lint
