--- a/.github/workflows/checks.yaml
+++ b/.github/workflows/checks.yaml
@@ -15,8 +15,8 @@ jobs:
           password: ${{ secrets.DOCKERHUB_TOKEN }}
       - name: Checkout
         uses: action/checkout@v2
-        env:
-          GH_TOKEN: ${{ secrets.WORKFLOW_ACCESS_TOKEN}}
+        with:
+          token: ${{ secrets.WORKFLOW_ACCESS_TOKEN }}
       - name: Test
         run: docker-compose run --rm app sh -c "python manage.py test"
       - name: Lint
