--- a/.github/workflows/checks.yaml
+++ b/.github/workflows/checks.yaml
@@ -12,11 +12,9 @@ jobs:
         uses: docker/login-action@v1
         with:
           username: ${{ secrets.DOCKERHUB_USER }}
-          password: ${{ secrets.DOCKERHUB_TOKEN }}
+          password: ${{ secrets.WORKFLOW_ACCESS_TOKEN }}
       - name: Checkout
         uses: action/checkout@v2
-        with:
-          token: ${{ secrets.WORKFLOW_ACCESS_TOKEN }}
       - name: Test
         run: docker-compose run --rm app sh -c "python manage.py test"
       - name: Lint
