--- a/.github/workflows/checks.yaml
+++ b/.github/workflows/checks.yaml
@@ -12,9 +12,11 @@ jobs:
         uses: docker/login-action@v1
         with:
           username: ${{ secrets.DOCKERHUB_USER }}
-          password: ${{ secrets.GITHUB_TOKEN }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
       - name: Checkout
         uses: action/checkout@v2
+        with:
+          token: ${{ secrets.GITHUB_TOKEN }}
       - name: Test
         run: docker-compose run --rm app sh -c "python manage.py test"
       - name: Lint
